test/TestPhases/importchecking/valid/importsingletons.blc
// just to trigger recursive compilation of implementations and generated signatures

import ids "../imports/importdeclaredsingleton"  

@[EntryPoint]
activity Main ()
    await true
end