test/TestPhases/importchecking/invalid/importboxinternal.blc

import h "box:testlib/hidden"  // import of internal module not allowed

@[EntryPoint]
activity Main()
    var s: h.S = h.init()
end